Implemented format_str, updated README.md; `-` omission standardised through argparse

--- a/django_settings_cli/_data/local.py.example
+++ b/django_settings_cli/_data/local.py.example
@@ -15,8 +15,8 @@ DATABASES = {
         'NAME': 'taiga',
         'USER': 'taiga',
         'PASSWORD': 'changeme',
-        'HOST': '',
-        'PORT': '',
+        'HOST': 'localhost',
+        'PORT': '5432',
     }
 }
 
